@@ -14,6 +14,7 @@
   ASN.1 file to test the whole toolchain.
 - [ ] Must create a Concept/NewProjectLayoutNetwork wiki page
 **** TODO Creating benchmark for serialization
+     CLOCK: [2013-04-22 lun. 18:00]--[2013-04-22 lun. 18:45] =>  0:45
      CLOCK: [2013-04-21 dim. 10:32]--[2013-04-21 dim. 11:20] =>  0:48
      CLOCK: [2013-04-20 sam. 20:11]--[2013-04-20 sam. 20:35] =>  0:24
      CLOCK: [2013-04-20 sam. 18:38]--[2013-04-20 sam. 18:56] =>  0:18
