@@ -2,19 +2,19 @@ bin_PROGRAMS = benchmark
 
 headers = Benchmark.hpp
 
-sources = main.cpp
+sources = main.cpp ASNPerson.C # Generated by snacc
 
 benchmark_SOURCES = $(headers) $(sources)
 
-benchmark_CPPFLAGS = $(DEPS_CFLAGS) \
-	$(shell snacc-config --language=C++ --cflags ebuf)
+# snacc-config --language=C++ --cflags ebuf
+benchmark_CPPFLAGS = $(DEPS_CFLAGS) -I/usr/include/snacc/c++/ -DUSE_EXP_BUF
 
-benchmark_LDADD = $(DEPS_LIBS) /usr/lib/libmongoclient.a -lboost_system -lboost_filesystem -lboost_thread -lboost_serialization 
-
-benchmark_LDFLAGS=$(shell snacc-config --language=C++ --libs ebuf)
+# snacc-config --language=C++ --libs ebuf
+benchmark_LDADD = $(DEPS_LIBS) /usr/lib/libmongoclient.a -lboost_system -lboost_filesystem -lboost_thread -lboost_serialization -lasn1c++
 
 asn:
-	snacc -edptfc -u /usr/include/snacc/asn1/asn-useful.asn1 ASNPerson.asn
+	snacc -C -u /usr/include/snacc/asn1/asn-useful.asn1 ASNPerson.asn
+	snacc -C -u /usr/include/snacc/asn1/asn-useful.asn1 RainbruRPG.asn
 
 clean-local:
 	rm -fr ASNPerson.C ASNPerson.h
